# consensus-diff

./: LICENSE.md  README.md  backends.toml  backends.toml.example  conftest.py  known-divergences.toml  meson.build  pyproject.toml  test_diff.py
consensus_diff/: backends.py  compare.py  fuzz.py  mutate.py  protocol.py  report.py  schema.py  vectors.py
docs/: protocol.md
tests/: fake_backend.py  test_backends.py  test_compare.py  test_driver_smoke.py  test_fuzz.py  test_mutate.py  test_protocol.py  test_report.py  test_schema.py  test_vectors_prepare.py  test_vectors_walk.py
